--- a/scanner/templates/scanner/barcode_scanner.html
+++ b/scanner/templates/scanner/barcode_scanner.html
@@ -1,5 +1,4 @@
-{% extends 'scanner/base.html' %} {% block title %}Barcode Scanner - {{
-schedule.subject.code }} {% endblock %} {% block content %}
+{% extends 'scanner/base.html' %} {% block title %} Barcode Scanner - {{ schedule.subject.code }} {% endblock %} {% block content %}
 <div class="row">
   <div class="col-12">
     <div class="d-flex justify-content-between align-items-center mb-4">
