--- a/scanner/templates/scanner/user_profile.html
+++ b/scanner/templates/scanner/user_profile.html
@@ -51,7 +51,13 @@ Scanner {% endblock %} {% block content %}
                   <h6 class="card-title text-success">
                     <i class="fas fa-barcode me-2"></i>Your Barcode
                   </h6>
-                  <div class="barcode-display">
+                  <div class="barcode-display text-center">
+                    <img
+                      src="{% url 'barcode_image' %}"
+                      alt="Barcode Image"
+                      style="max-width: 100%; height: 80px; margin-bottom: 10px"
+                    />
+                    <br />
                     <code class="fs-4 fw-bold text-dark"
                       >{{ user.barcode }}</code
                     >
