--- a/scanner/templates/scanner/admin_dashboard.html
+++ b/scanner/templates/scanner/admin_dashboard.html
@@ -167,7 +167,7 @@ Scanner{% endblock %} {% block content %}
           </table>
         </div>
         <div class="text-center">
-          <a href="#" class="btn btn-sm btn-outline-primary">View All Users</a>
+          <!-- <a href="#" class="btn btn-sm btn-outline-primary">View All Users</a> -->
         </div>
       </div>
     </div>
@@ -211,11 +211,11 @@ Scanner{% endblock %} {% block content %}
             </tbody>
           </table>
         </div>
-        <div class="text-center">
+        <!-- <div class="text-center">
           <a href="#" class="btn btn-sm btn-outline-primary"
             >View All Schedules</a
           >
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
