--- a/scanner/templates/scanner/dashboard.html
+++ b/scanner/templates/scanner/dashboard.html
@@ -291,16 +291,16 @@ Dashboard - Attendance Scanner {% endblock %} {% block content %}
           <i class="fas fa-calendar-alt me-2"></i>Manage Schedules
         </a>
       </div>
-      <div class="col-md-4 mb-3">
+      <!-- <div class="col-md-4 mb-3">
         <a href="#" class="btn btn-outline-success w-100">
           <i class="fas fa-file-export me-2"></i>Export Reports
         </a>
-      </div>
-      <div class="col-md-4 mb-3">
+      </div> -->
+      <!-- <div class="col-md-4 mb-3">
         <a href="#" class="btn btn-outline-info w-100">
           <i class="fas fa-chart-bar me-2"></i>View Analytics
         </a>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
@@ -360,7 +360,7 @@ Dashboard - Attendance Scanner {% endblock %} {% block content %}
     </div>
   </div>
 
-  <div class="col-md-6 mb-4">
+  <!-- <div class="col-md-6 mb-4">
     <div class="card">
       <div class="card-header">
         <h5 class="mb-0">
@@ -381,6 +381,6 @@ Dashboard - Attendance Scanner {% endblock %} {% block content %}
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 {% endif %} {% endblock %}
